@@ -20,9 +20,11 @@
 #include <log4cpp/FactoryParams.hh>
 #include <memory>
 #include <stdio.h>
+#include <math.h>
 
 #ifdef LOG4CPP_HAVE_SSTREAM
 #include <sstream>
+#include <iomanip>
 #endif
 
 namespace log4cpp {
@@ -35,11 +37,13 @@ namespace log4cpp {
                                              mode_t mode) :
         FileAppender(name, fileName, append, mode),
         _maxBackupIndex(maxBackupIndex > 0 ? maxBackupIndex : 1),
+        _maxBackupIndexWidth((_maxBackupIndex > 0) ? log10(_maxBackupIndex)+1 : 1),
         _maxFileSize(maxFileSize) {
     }
 
     void RollingFileAppender::setMaxBackupIndex(unsigned int maxBackups) { 
         _maxBackupIndex = maxBackups; 
+        _maxBackupIndexWidth = (_maxBackupIndex > 0) ? log10(_maxBackupIndex)+1 : 1;
     }
     
     unsigned int RollingFileAppender::getMaxBackupIndex() const { 
@@ -57,18 +61,21 @@ namespace log4cpp {
     void RollingFileAppender::rollOver() {
         ::close(_fd);
         if (_maxBackupIndex > 0) {
-            
             std::ostringstream filename_stream;
-            filename_stream << _fileName << "." << _maxBackupIndex << std::ends;
-            std::string last_log_filename = filename_stream.str();
+        	filename_stream << _fileName << "." << std::setw( _maxBackupIndexWidth ) << std::setfill( '0' ) << _maxBackupIndex << std::ends;
+        	// remove the very last (oldest) file
+        	std::string last_log_filename = filename_stream.str();
+            std::cout << last_log_filename << std::endl;
             ::remove(last_log_filename.c_str());
             
+            // rename each existing file to the consequent one
             for(unsigned int i = _maxBackupIndex; i > 1; i--) {
                 filename_stream.str(std::string());
-                filename_stream << _fileName << '.' << i - 1 << std::ends;
+                filename_stream << _fileName << '.' << std::setw( _maxBackupIndexWidth ) << std::setfill( '0' ) << i - 1 << std::ends;  // set padding so the files are listed in order
                 ::rename(filename_stream.str().c_str(), last_log_filename.c_str());
                 last_log_filename = filename_stream.str();
             }
+            // new file will be numbered 1
             ::rename(_fileName.c_str(), last_log_filename.c_str());
         }
         _fd = ::open(_fileName.c_str(), _flags, _mode);
